# ddot.it-syntax-tools

./: .gitignore  README.adoc  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: conformance.yml  publish-pypi.yml  publish-rubygems.yml  publish.yml
chroma/: README.md  ddot.xml  design.adoc
highlightjs/: CHANGELOG.md  README.md  design.adoc  index.js  package.json
prismjs/: CHANGELOG.md  README.md  design.adoc  index.js  package.json
pygments/: .gitignore  CHANGELOG.md  README.md  design.adoc  pyproject.toml
pygments/pygments_ddot/: __init__.py  lexer.py
rouge/: CHANGELOG.md  README.md  design.adoc  rouge-ddot.gemspec
rouge/lib/rouge/lexers/: ddot.rb
shiki/: CHANGELOG.md  README.md  design.adoc  index.js  package.json
textmate/: CHANGELOG.md  README.md  ddot.tmLanguage.json  design.adoc  index.js  package.json
tools/: conformance-highlightjs.mjs  conformance-prismjs.mjs  conformance-pygments.py  conformance-rouge.rb  conformance-shiki.mjs  conformance-textmate.mjs  publish-test.mjs  regenerate-tokens.mjs  textmate-tokenize.mjs
tools/conformance-chroma/: go.mod  go.sum  main.go
